# cmake-skeleton

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt
